--- a/iChat/Info.plist
+++ b/iChat/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
-	<string>E2E</string>
+	<string>ETE</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -17,11 +17,23 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0</string>
+	<string>1.2</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSAppleMusicUsageDescription</key>
+	<string>E2E needs to use your Media library</string>
+	<key>NSCameraUsageDescription</key>
+	<string>E2E needs to use your Camera</string>
+	<key>NSContactsUsageDescription</key>
+	<string>E2E needs to access ypur Contacts</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>E2E needs to access ypur Location</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>E2E needs to use your Microphone</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>E2E needs to use your Photo library</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
@@ -36,17 +48,5 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
-	<key>NSCameraUsageDescription</key>
-	<string>E2E needs to use your Camera</string>
-	<key>NSAppleMusicUsageDescription</key>
-	<string>E2E needs to use your Media library</string>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string>E2E needs to use your Photo library</string>
-	<key>NSMicrophoneUsageDescription</key>
-	<string>E2E needs to use your Microphone</string>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>E2E needs to access ypur Location</string>
-	<key>NSContactsUsageDescription</key>
-	<string>E2E needs to access ypur Contacts</string>
 </dict>
 </plist>
