--- a/iChat/GoogleService-Info.plist
+++ b/iChat/GoogleService-Info.plist
@@ -7,9 +7,9 @@
 	<key>AD_UNIT_ID_FOR_INTERSTITIAL_TEST</key>
 	<string>ca-app-pub-3940256099942544/4411468910</string>
 	<key>CLIENT_ID</key>
-	<string>916198313792-5se2uk3ckfiv4g0fvspsfjvcs332fqcm.apps.googleusercontent.com</string>
+	<string>916198313792-4n7h49hvjmu26ur41n6492gmb9flksto.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.916198313792-5se2uk3ckfiv4g0fvspsfjvcs332fqcm</string>
+	<string>com.googleusercontent.apps.916198313792-4n7h49hvjmu26ur41n6492gmb9flksto</string>
 	<key>API_KEY</key>
 	<string>AIzaSyASZWoJ10juzJwWRCdzOJe3e-xKjfuGZBI</string>
 	<key>GCM_SENDER_ID</key>
@@ -17,7 +17,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>Sarvad-Shetty.iChat</string>
+	<string>Sarvad-Shetty.E2E</string>
 	<key>PROJECT_ID</key>
 	<string>flash-chat-967cc</string>
 	<key>STORAGE_BUCKET</key>
@@ -33,7 +33,7 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:916198313792:ios:a489f30291dfc177</string>
+	<string>1:916198313792:ios:533aaf71056c888b</string>
 	<key>DATABASE_URL</key>
 	<string>https://flash-chat-967cc.firebaseio.com</string>
 </dict>
